fixing for firefox and others

--- a/source/java/admin-webapp/src/scripts/tenants/tenants.html
+++ b/source/java/admin-webapp/src/scripts/tenants/tenants.html
@@ -1,7 +1,7 @@
 <div ng-controller="tenantController">
 
     <div class="front-page">
-        <div>
+        <div style="clear: both;">
             <div>
                 <div>
                     <span class="pull-left header" translate>tenants.title</span>
