--- a/source/java/admin-webapp/src/scripts/activity/activity.html
+++ b/source/java/admin-webapp/src/scripts/activity/activity.html
@@ -3,7 +3,7 @@
     <!-- this spacer is to align the top of this page with all the pages that are decks -->
     <div style="height: 30px;"></div>
     
-    <div class="top-label">
+    <div class="top-label" style="clear: both;height: 42px;">
         <span class="header pull-left" style="margin-right: 24px;" translate>activities.header</span>
         <fui-input style="width: 350px;" class="form-control pull-left" placeholder="{{ 'common.l_search' | translate }}" ng-model="searchQuery" icon-class="icon-search tall-icon-fix">
     </div>
