--- a/source/java/admin-webapp/src/scripts/users/users.html
+++ b/source/java/admin-webapp/src/scripts/users/users.html
@@ -2,7 +2,7 @@
 
     <div class="">
 
-        <div>
+        <div style="clear: both;">
             <span class="header pull-left" style="margin-right: 24px;" translate>users.title</span>
             <fui-input style="width: 350px;" class="form-control pull-left" placeholder="{{ 'common.l_search' | translate }}" icon-class="icon-search tall-icon-fix" ng-model="userQuery"></fui-input>
             <a ng-click="createNewUser()" class="add-user-link pull-right btn btn-primary" translate>users.l_create_user</a>
