--- a/source/java/admin-webapp/src/scripts/directives/fds-components/tiering/tiering.html
+++ b/source/java/admin-webapp/src/scripts/directives/fds-components/tiering/tiering.html
@@ -1,5 +1,5 @@
 <div class="tiering-policy-panel">
-    <div class="header" style="margin-bottom: 12px;">
+    <div class="sub-header" style="margin-bottom: 12px;">
         <span translate>volumes.l_tiering</span>
     </div>
     
