--- a/source/java/admin-webapp/src/scripts/directives/widgets/slidewindowstack/slidewindowstack.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/slidewindowstack/slidewindowstack.html
@@ -1,4 +1,4 @@
-<div >
+<div ng-style="{ height: totalHeight + 40}">
     <div style="height: 30px;">
         <div class="inline">
             <a class="slide-window-stack-breadcrumb" ng-repeat="slide in currentStack" ng-if="!$last" ng-click="back( $index )">&lt;&nbsp;{{slide.breadcrumbName}}</a>
