adding firebreak logic

--- a/source/java/admin-webapp/src/scripts/volumes/volumes.html
+++ b/source/java/admin-webapp/src/scripts/volumes/volumes.html
@@ -77,7 +77,9 @@
 -->
                             </td>
                             
-                            <td class="firebreak"></td>
+                            <td class="firebreak">
+                                <span style="line-height: 19px;" class="icon icon-firebreak" ng-style="{ color: getFirebreakColor( volume ) }"></span>
+                            </td>
 
                             <td class="priority">
                                 <em>
