making the button divs add to the height

--- a/source/java/admin-webapp/src/scripts/tenants/create/createTenant.html
+++ b/source/java/admin-webapp/src/scripts/tenants/create/createTenant.html
@@ -10,9 +10,11 @@
         </div>
     </div>
 
-    <div class="pull-left"style="padding-top: 12px;margin-bottom: 42px;">
-        <button class="btn btn-primary create-tenant-button" style="display: inline-block;" ng-click="save()" translate>tenants.l_create_tenant_title</button>
-        <button class="btn btn-secondary cancel-creation" style="display: inline-block;" ng-click="cancel()" translate>common.l_cancel</button>
+    <div style="display: inline-block;">
+        <div class="pull-left"style="padding-top: 12px;clear: both;">
+            <button class="btn btn-primary create-tenant-button" style="display: inline-block;" ng-click="save()" translate>tenants.l_create_tenant_title</button>
+            <button class="btn btn-secondary cancel-creation" style="display: inline-block;" ng-click="cancel()" translate>common.l_cancel</button>
+        </div>
     </div>
 
 </div>
