starting to build the system status tile functionality

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -119,6 +119,7 @@
     <script type="text/javascript" src="scripts/directives/fds-components/snapshot-policies/snapshot-policy.js"></script>
     <script type="text/javascript" src="scripts/directives/fds-components/snapshot-policies/timeline-policy.js"></script>    
     <script type="text/javascript" src="scripts/directives/fds-components/tiering/tiering.js"></script>
+    <script type="text/javascript" src="scripts/directives/fds-components/healthtile/healthtile.js"></script>
 </head>
 
 <body class="menu-active">
