adding tooltips to the volume table

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -105,6 +105,7 @@
     <script type="text/javascript" src="scripts/directives/widgets/summarynumberdisplay/summaryNumberDisplay.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/statustile/statusTile.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/tooltip/tooltip.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/mouseover/mouseover.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/waterfallslider/waterfallslider.js"></script>
 
     <script type="text/javascript" src="scripts/directives/utils/shownotify/shownotify.js"></script>
