--- a/source/java/admin-webapp/src/scripts/directives/charts/linechart/linechart.html
+++ b/source/java/admin-webapp/src/scripts/directives/charts/linechart/linechart.html
@@ -1,7 +1,7 @@
 <div style="width: 100%;height: 100%;position: relative;" >
     <div style="width: 100%;height: 100%;" class="line-chart" ng-mouseover="setHoverEvent( $event )" ng-mouseleave="hoverEvent = $event">
     </div>
-    <tooltip event="hoverEvent">
+    <mouse-over event="hoverEvent">
         <div class="tooltip-placeholder"></div>
-    </tooltip>
+    </mouse-over>
 </div>
