--- a/source/java/admin-webapp/src/scripts/directives/charts/stackedlinechart/stackedlinechart.html
+++ b/source/java/admin-webapp/src/scripts/directives/charts/stackedlinechart/stackedlinechart.html
@@ -9,7 +9,7 @@
 -->
     <div style="width: 100%;height: 100%;" class="stacked-line-chart" ng-mouseover="setHoverEvent( $event ); showTooltip = true" ng-mouseleave="hoverEvent = $event; showTooltip = false">
     </div>
-    <tooltip event="hoverEvent">
+    <mouse-over event="hoverEvent">
         <div class="tooltip-placeholder"></div>
-    </tooltip>
+    </mouse-over>
 </div>
