--- a/source/java/admin-webapp/src/scripts/directives/widgets/mouseover/mouseover.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/mouseover/mouseover.html
@@ -1,8 +1,7 @@
-<div class="fds-tooltip" ng-style="{ top: top, left: left, width: textWidth + 12 }" ng-show="show">
+<div class="fds-mouseover" ng-style="{ top: top, left: left }" ng-show="show">
     <svg height="6" width="7" style="position: absolute;top: -6px;" ng-show="below" ng-class="{ 'left-side': leftSide, 'right-side': !leftSide }">
         <polygon points="4,0 7,6 0,6" style="fill: white;fill-opacity: 0.9;"></polygon></svg>
     <svg height="6" width="7" style="position: absolute;top: 100%;" ng-show="!below" ng-class="{ 'left-side': leftSide, 'right-side': !leftSide }">
         <polygon points="0,0 7,0 4,6" style="fill: white;fill-opacity: 0.9;"></polygon></svg>
-    <div class="tooltip-body" ng-style="{ width: textWidth }" ng-show="!bindText">{{ text }}</div>
-    <div class="tooltip-body" ng-style="{ width: textWidth }" ng-show="bindText">{{ bindText }}</div>
+    <div ng-transclude class="tooltip-body"></div>
 </div>
