--- a/source/java/admin-webapp/src/scripts/main/main.html
+++ b/source/java/admin-webapp/src/scripts/main/main.html
@@ -15,9 +15,9 @@
             <div class="logo"></div>
             <form>
 
-                <fui-input name="username" placeholder="{{ 'common.username' | translate }}" ng-model="username" icon-class="fui-mail" ng-keyup="keyEntered( $event )"></fui-input>
+                <fui-input name="username" no-border="true" placeholder="{{ 'common.username' | translate }}" ng-model="username" icon-class="fui-mail" ng-keyup="keyEntered( $event )"></fui-input>
 
-                <fui-input name="password" placeholder="{{ 'common.password' | translate }}" type="password" ng-model="password" icon-class="fui-lock" ng-keyup="keyEntered( $event )"></fui-input>
+                <fui-input name="password" no-border="true" placeholder="{{ 'common.password' | translate }}" type="password" ng-model="password" icon-class="fui-lock" ng-keyup="keyEntered( $event )"></fui-input>
 <!--
                 <div class="checkbox-parent">
                     <fui-checkbox label="{{ 'login.remember_me' | translate }}" checked="rememberChecked"></fui-checkbox>
