--- a/source/java/admin-webapp/src/scripts/tenants/create/createTenant.html
+++ b/source/java/admin-webapp/src/scripts/tenants/create/createTenant.html
@@ -6,14 +6,14 @@
 
     <div class="settings-body">
         <div class="form-group" style="width: 260px;">
-            <fui-input type="text" class="form-control tenant-name-input" size="32" placeholder="Tenant Name" ng-model="name">
+            <fui-input type="text" class="skinny tenant-name-input" size="32" placeholder="Tenant Name" ng-model="name">
         </div>
     </div>
 
     <div style="display: inline-block;">
         <div class="pull-left"style="padding-top: 12px;clear: both;">
-            <button class="btn btn-primary create-tenant-button" style="display: inline-block;" ng-click="save()" translate>tenants.l_create_tenant_title</button>
-            <button class="btn btn-secondary cancel-creation" style="display: inline-block;" ng-click="cancel()" translate>common.l_cancel</button>
+            <button class="btn btn-primary create-tenant-button skinny" style="display: inline-block;" ng-click="save()" translate>tenants.l_create_tenant_title</button>
+            <button class="btn btn-secondary cancel-creation skinny" style="display: inline-block;" ng-click="cancel()" translate>common.l_cancel</button>
         </div>
     </div>
 
