--- a/source/java/admin-webapp/src/scripts/tenants/tenants.html
+++ b/source/java/admin-webapp/src/scripts/tenants/tenants.html
@@ -5,7 +5,7 @@
             <div>
                 <div>
                     <span class="pull-left header" translate>tenants.title</span>
-                    <a ng-click="createNewTenant()" class="pull-right create-tenant-link btn btn-primary" translate>tenants.l_create_tenant</a>
+                    <a ng-click="createNewTenant()" class="pull-right create-tenant-link btn btn-primary skinny" translate>tenants.l_create_tenant</a>
                 </div>
             </div>
         </div>
