--- a/source/java/admin-webapp/src/scripts/system/system.html
+++ b/source/java/admin-webapp/src/scripts/system/system.html
@@ -6,9 +6,9 @@
         <div class="nodes">
             <span>{{name}}</span>
             <span class="header pull-left" style="margin-right: 24px;" translate>system.l_nodes</span>
-            <fui-input style="width: 350px;" class="form-control pull-left" ng-model="searchText" placeholder="{{ 'common.l_search' | translate }}" icon-class="icon-search tall-icon-fix"></fui-input>
+            <fui-input style="width: 350px;" class="skinny pull-left" ng-model="searchText" placeholder="{{ 'common.l_search' | translate }}" icon-class="icon-search"></fui-input>
 
-            <a ng-click="addNode()" class="add_node pull-right btn btn-primary" translate>system.l_add_node</a>
+            <a ng-click="addNode()" class="add_node pull-right btn btn-primary skinny" style="margin-right: 5px;" translate>system.l_add_node</a>
         </div>
         
         <!-- actual table -->
