--- a/source/java/admin-webapp/src/scripts/users/create/createUser.html
+++ b/source/java/admin-webapp/src/scripts/users/create/createUser.html
@@ -7,7 +7,7 @@
     <form name="createUserForm">
         <div class="settings-body">
             <div class="side-by-side" >
-                <fui-input type="text" style="width: 260px;" class="form-control create-user-name" size="32" placeholder="Username" ng-model="name" name="username" required ng-class="{required: createUserForm.username.$error.required && nameInit !== true}" ng-keyup="usernameTyped( $event )" disabled="editing">
+                <fui-input type="text" style="width: 260px;" class="skinny create-user-name" size="32" placeholder="Username" ng-model="name" name="username" required ng-class="{required: createUserForm.username.$error.required && nameInit !== true}" ng-keyup="usernameTyped( $event )" disabled="editing">
                 </fui-input>
                 <div>
                     <span class="required" ng-show="createUserForm.username.$error.required && nameInit !== true" class="required">Required</span>
@@ -15,14 +15,14 @@
             </div>
             <div class="page-vertical-spacer"></div>
             <div class="side-by-side">
-                <fui-input style="width: 260px;" type="password" class="form-control create-user-password" size="32" placeholder="{{ 'common.password' | translate}}" ng-model="password" ng-keyup="passwordTyped( $event )" name="password" required ng-class="{required: createUserForm.password.$error.required && passInit !== true}" disabled="editing">
+                <fui-input style="width: 260px;" type="password" class="skinny create-user-password" size="32" placeholder="{{ 'common.password' | translate}}" ng-model="password" ng-keyup="passwordTyped( $event )" name="password" required ng-class="{required: createUserForm.password.$error.required && passInit !== true}" disabled="editing">
                 </fui-input>
                 <div>
                     <span class="required" ng-show="createUserForm.password.$error.required && passInit !== true" class="required" translate>common.l_required</span>
                 </div>
             </div>
             <div class="side-by-side password-confirmation-parent" ng-show="!editing">
-                <fui-input style="width: 260px;" type="password" class="form-control create-user-confirm" size="32" placeholder="{{ 'common.confirm_password' | translate }}" ng-model="confirm" ng-keyup="confirmTyped( $event )" name="confirm" required ng-class="{required: createUserForm.confirm.$error.required && confirmInit !== true}">
+                <fui-input style="width: 260px;" type="password" class="skinny create-user-confirm" size="32" placeholder="{{ 'common.confirm_password' | translate }}" ng-model="confirm" ng-keyup="confirmTyped( $event )" name="confirm" required ng-class="{required: createUserForm.confirm.$error.required && confirmInit !== true}">
                 </fui-input>
                 <div>
                     <span class="required" ng-show="createUserForm.confirm.$error.required && confirmInit !== true" class="required" translate>common.l_required</span>
@@ -30,7 +30,7 @@
             </div>
 
             <div class="side-by-side" ng-show="tenants.length && tenants.length > 0">
-                <fui-dropdown class="tenant-dropdown" selected="tenant" default-label="tenantLabel" items="tenants"></fui-dropdown>
+                <fui-dropdown class="tenant-dropdown" selected="tenant" default-label="tenantLabel" items="tenants" skinny="true"></fui-dropdown>
 <!--
                 <div>
                     <span class="required" ng-show="createUserForm.confirm.$error.required && confirmInit !== true" class="required">Required</span>
@@ -46,12 +46,12 @@
 
     <div style="display: inline-block;">
         <div class="pull-left"style="padding-top: 12px;clear: both;">
-            <button class="btn btn-primary create-user-button" style="display: inline-block;" ng-click="save()">
+            <button class="btn btn-primary create-user-button skinny" style="display: inline-block;" ng-click="save()">
                 <span ng-show="!editing" translate>users.l_create_user</span>
                 <span ng-show="editing" translate>users.l_edit_user</span>
             </button>
 
-            <button class="btn btn-secondary create-user-cancel-button" style="display: inline-block;" ng-click="cancel()" translate>common.l_cancel</button>
+            <button class="btn btn-secondary create-user-cancel-button skinny" style="display: inline-block;" ng-click="cancel()" translate>common.l_cancel</button>
         </div>
     </div>
 </div>
