--- a/source/java/admin-webapp/src/scripts/volumes/volumes.html
+++ b/source/java/admin-webapp/src/scripts/volumes/volumes.html
@@ -6,9 +6,9 @@
         <div class="volumes">
             <span>{{name}}</span>
             <span class="header pull-left" style="margin-right: 24px;" translate>volumes.title</span>
-            <fui-input style="width: 350px;" class="form-control pull-left" ng-model="searchText" placeholder="{{ 'common.l_search' | translate }}" icon-class="icon-search tall-icon-fix"></fui-input>
+            <fui-input style="width: 350px;" class="skinny pull-left" ng-model="searchText" placeholder="{{ 'common.l_search' | translate }}" icon-class="icon-search"></fui-input>
 
-            <a ng-click="createNewVolume()" class="new_volume pull-right btn btn-primary" translate>volumes.l_create_volume</a>
+            <a ng-click="createNewVolume()" class="new_volume pull-right btn btn-primary skinny" translate>volumes.l_create_volume</a>
         </div>
         
         <div class="">
