--- a/source/java/admin-webapp/src/scripts/directives/fds-components/tiering/tiering.html
+++ b/source/java/admin-webapp/src/scripts/directives/fds-components/tiering/tiering.html
@@ -3,5 +3,5 @@
         <span translate>volumes.l_tiering</span>
     </div>
     
-    <button-bar buttons="tieringChoices" ng-model="policy"></button-bar>
+    <button-bar buttons="tieringChoices" ng-model="policy" disabled="disabled"></button-bar>
 </div>
