--- a/source/java/admin-webapp/src/scripts/directives/widgets/buttonbar/buttonbar.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/buttonbar/buttonbar.html
@@ -1,3 +1,4 @@
 <div class="button-bar">
-    <div ng-repeat="button in buttons" class="button" ng-class="{'left-end': $first, 'right-end': $last, selected: selected === button}" ng-click="selectButton( button )">{{ button.label }}</div>
+    <div ng-show="disabled === true" class="veil"></div>
+    <div ng-repeat="button in buttons" class="button" ng-class="{'left-end': $first, 'right-end': $last, selected: selected === button, hover : hover === true && disabled === false }" ng-click="selectButton( button )" ng-mouseenter="hover = true" ng-mouseleave="hover = false">{{ button.label }}</div>
 </div>
