--- a/source/java/admin-webapp/src/scripts/system/addnode/addnode.html
+++ b/source/java/admin-webapp/src/scripts/system/addnode/addnode.html
@@ -1,7 +1,13 @@
 <div class="dialog-page" ng-controller="addNodeController">
-
+    
     <div class="modal-header">
-        <span>Add Node</span>
+        <span translate class="create-volume-create-title" ng-show="volumeVars.creating === true">system.l_nodes</span>
+        <div class="pull-right flex">
+            <button class="btn btn-primary skinny" style="display: inline-block;margin-right: 8px;" ng-click="addNodes()">
+                <span translate>system.l_add_node</span>
+            </button>
+            <button class="btn btn-secondary cancel-creation skinny" style="display: inline-block;" ng-click="cancel()" translate>common.l_cancel</button>
+        </div>
     </div>
 
     <table class="default clickable">
@@ -50,8 +56,4 @@
             </tr>
         </tbody>
     </table>
-    <div class="pull-left">
-        <button class="btn btn-primary" ng-click="addNodes()">Add Nodes</button>
-        <button class="btn btn-secondary" ng-click="cancel()">Cancel</button>
-    </div>
 </div>
