styling the add node screen

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -97,6 +97,7 @@
     <script type="text/javascript" src="scripts/directives/widgets/datepicker/datepicker.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/datetimetyper/datetimetyper.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/buttonbar/buttonbar.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/switch/switch.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/treegrid/treegrid.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/pager/pager.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/macbrowser/macbrowser.js"></script>
