--- a/source/java/admin-webapp/src/scripts/system/addnode/addnode.html
+++ b/source/java/admin-webapp/src/scripts/system/addnode/addnode.html
@@ -1,7 +1,7 @@
 <div class="dialog-page" ng-controller="addNodeController">
     
-    <div class="modal-header">
-        <span translate class="create-volume-create-title" ng-show="volumeVars.creating === true">system.l_nodes</span>
+    <div class="header" style="height: 52px;">
+        <span translate class="create-volume-create-title">system.l_nodes</span>
         <div class="pull-right flex">
             <button class="btn btn-primary skinny" style="display: inline-block;margin-right: 8px;" ng-click="addNodes()">
                 <span translate>system.l_add_node</span>
@@ -12,41 +12,49 @@
 
     <table class="default clickable">
         <thead>
-            <th></th>
-            <th>Node Name</th>
-            <th>Site</th>
-            <th>Local Domain</th>
+            <th tool-tip text="{{ 'system.tt_node_name' | translate }}">
+                <div translate>
+                    system.th_node_name
+                </div>
+            </th>
+            <th tool-tip text="{{ 'system.tt_am' | translate }}">
+                <div translate>system.th_am</div>
+            </th>
+            <th tool-tip text="{{ 'system.tt_om' | translate }}">
+                <div translate>system.th_om</div>
+            </th>
+            <th tool-tip text="{{ 'system.tt_pm' | translate }}">
+                <div translate>system.th_pm</div>
+            </th>
+            <th tool-tip text="{{ 'system.tt_sm' | translate }}">
+                <div translate>system.th_sm</div>
+            </th>
+            <th tool-tip text="{{ 'system.tt_dm' | translate }}">
+                <div translate>system.th_dm</div>
+            </th>
         </thead>
         <tbody>
-            <tr class="no-border" ng-repeat-start="detachedNode in detachedNodes">
+            <tr class="no-border" ng-repeat="detachedNode in detachedNodes">
                 <td width="32">
-<!--                    <fui-checkbox checked="detachedNode.addall"></fui-checkbox>-->
-                    <tri-state-check check-state="detachedNode.addAll" ng-click="parentStateChanged( detachedNode )"></tri-state-checkbox>
+                    <div class="flex">
+                        <tri-state-check check-state="detachedNode.addAll" ng-click="parentStateChanged( detachedNode )"></tri-state-checkbox>
+                        {{ detachedNode.node_name }}
+                    </div>
                 </td>
                 <td>
-                    {{detachedNode.node_name}}
+                    <switch ng-model="detachedNode.am" on-text="{{ onText }}" off-text="{{ offTest }}"></switch>
                 </td>
                 <td>
-                    {{detachedNode.site}}
+                    <switch ng-model="detachedNode.om" on-text="{{ onText }}" off-text="{{ offTest }}"></switch>
                 </td>
                 <td>
-                    {{detachedNode.local_domain}}
+                    <switch ng-model="detachedNode.pm" on-text="{{ onText }}" off-text="{{ offTest }}"></switch>
                 </td>
-            </tr>
-            <tr ng-repeat-end class="node-sub-services">
-                <td colspan="4">
-                    <div class="clear-fix">
-                        <tri-state-check class="pull-left" check-state="detachedNode.am" ng-click="serviceStateChanged( detachedNode )"></tri-state-check>
-                        <span>Access Manager</span>
-                    </div>
-                    <div class="clear-fix">
-                        <tri-state-check class="pull-left" check-state="detachedNode.dm" ng-click="serviceStateChanged( detachedNode )"></tri-state-check>
-                        <span>Data Manager</span>
-                    </div>
-                    <div class="clear-fix">
-                        <tri-state-check class="pull-left" check-state="detachedNode.sm" ng-click="serviceStateChanged( detachedNode )"></tri-state-check>
-                        <span>Storage Manager</span>
-                    </div>
+                <td>
+                    <switch ng-model="detachedNode.sm" on-text="{{ onText }}" off-text="{{ offTest }}"></switch>
+                </td>
+                <td>
+                    <switch ng-model="detachedNode.dm" on-text="{{ onText }}" off-text="{{ offTest }}"></switch>
                 </td>
             </tr>
             <tr class="disabled" ng-show="!detachedNodes.length || detachedNodes.length === 0">
