--- a/source/java/admin-webapp/src/scripts/directives/angular-fui/fui-input/fui-input.html
+++ b/source/java/admin-webapp/src/scripts/directives/angular-fui/fui-input/fui-input.html
@@ -1,4 +1,4 @@
-<div class="fui-input form-group" ng-disabled="disabled === true" ng-class="{ 'no-border' : noBorder === 'true' }">
+<div class="fui-input form-group" ng-disabled="disabled === true" ng-style="{ 'border-width' : (noBorder === 'true') ? '0px' : '1px' }">
     <input ng-model="aliasedModel" type="{{type}}" placeholder="{{placeholder}}" autofocus autocomplete="off" autocapitalize="off" ng-disabled="disabled === true">
     <label class="{{iconClass}} input-icon"></label>
 </div>
