--- a/source/java/admin-webapp/src/scripts/system/system.html
+++ b/source/java/admin-webapp/src/scripts/system/system.html
@@ -42,16 +42,16 @@
                 </thead>
                 <tbody>
                     <tr ng-repeat="node in nodes.nodes | filter:searchText | orderBy:sortPredicate:reverse" class="node-item" >
-                        <td>{{node.name}}</td>
+                        <td class="node-name">{{node.name}}</td>
 <!--
                         <td>{{node.site}}</td>
                         <td>{{node.domain}}</td>
 -->
-                        <td class="process-cell process-width"><span class="{{getStatus( node.accessManagers )}}"></span></td>
-                        <td class="process-cell process-width"><span class="{{getStatus( node.platformManagers )}}"></span></td>
-                        <td class="process-cell process-width"><span class="{{getStatus( node.orchestrationManagers )}}"></span></td>
-                        <td class="process-cell process-width"><span class="{{getStatus( node.storageManagers )}}"></span></td>
-                        <td class="process-cell process-width"><span class="{{getStatus( node.dataManagers )}}"></span></td>
+                        <td class="process-cell process-width ams"><span class="{{getStatus( node.accessManagers )}}"></span></td>
+                        <td class="process-cell process-width pms"><span class="{{getStatus( node.platformManagers )}}"></span></td>
+                        <td class="process-cell process-width oms"><span class="{{getStatus( node.orchestrationManagers )}}"></span></td>
+                        <td class="process-cell process-width sms"><span class="{{getStatus( node.storageManagers )}}"></span></td>
+                        <td class="process-cell process-width dms"><span class="{{getStatus( node.dataManagers )}}"></span></td>
                     </tr>
                 </tbody>
             </table>
