--- a/source/java/admin-webapp/src/scripts/system/system.html
+++ b/source/java/admin-webapp/src/scripts/system/system.html
@@ -41,7 +41,7 @@
                     <th></th>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="node in nodes.nodes | filter:searchText | orderBy:sortPredicate:reverse" class="node-item" >
+                    <tr ng-repeat="node in nodes | filter:searchText | orderBy:sortPredicate:reverse" class="node-item" >
                         <td class="node-name">{{node.name}}</td>
 <!--
                         <td>{{node.site}}</td>
