trying to fix the service status problem

--- a/source/java/admin-webapp/src/scripts/activity/activity.html
+++ b/source/java/admin-webapp/src/scripts/activity/activity.html
@@ -30,4 +30,6 @@
         </div>
 <!--        <pager ng-model="activities" filter="filter" call="getActivities" back-label="{{ 'common.l_back' | translate }}" next-label="{{ 'common.l_next' | translate }}"></pager>-->
     </div>
+        
+    <div style="height: 25px;"></div>
 </div>
