creating a bodyless demo

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -53,8 +53,18 @@
     <script type="text/javascript" src="scripts/services/data/stats_service.js"></script>
     <script type="text/javascript" src="scripts/services/utils/resize_service.js"></script>
     <script type="text/javascript" src="scripts/services/items/snapshot_api.js"></script>
-    <script type="text/javascript" src="scripts/services/admin/tenant_service.js"></script>
+    <script type="text/javascript" src="scripts/services/admin/tenant_service.js"></script>@@DEV@@-->
 
+<!--@@DEMO@@ 
+    <script type="text/javascript" src="mockAuth.js"></script>
+    <script type="text/javascript" src="mockNode.js"></script>
+    <script type="text/javascript" src="mockSnapshot.js"></script>
+    <script type="text/javascript" src="mockStats.js"></script>
+    <script type="text/javascript" src="mockTenant.js"></script>
+    <script type="text/javascript" src="mockVolume.js"></script>
+    <script type="text/javascript" src="demo-scripts/demo-script.js"></script> @@DEMO@@-->
+
+<!--@@DEV@@
     <script type="text/javascript" src="scripts/main/mainController.js"></script>
     <script type="text/javascript" src="scripts/volumes/volumeContainerController.js"></script>
     <script type="text/javascript" src="scripts/volumes/volumeController.js"></script>
@@ -122,6 +132,7 @@
     <script type="text/javascript" src="scripts/directives/fds-components/snapshot-policies/timeline-policy.js"></script>    
     <script type="text/javascript" src="scripts/directives/fds-components/tiering/tiering.js"></script>
     <script type="text/javascript" src="scripts/directives/fds-components/healthtile/healthtile.js"></script>
+    
 </head>
 
 <body class="menu-active">
