performance stat mockup

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -62,6 +62,7 @@
     <script type="text/javascript" src="mockStats.js"></script>
     <script type="text/javascript" src="mockTenant.js"></script>
     <script type="text/javascript" src="mockVolume.js"></script>
+    <script type="text/javascript" src="mockActivities.js"></script>
     <script type="text/javascript" src="demo-scripts/demo-script.js"></script> @@DEMO@@-->
 
 <!--@@DEV@@
