adding capacity and firebreak

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -63,7 +63,10 @@
     <script type="text/javascript" src="mockTenant.js"></script>
     <script type="text/javascript" src="mockVolume.js"></script>
     <script type="text/javascript" src="mockActivities.js"></script>
-    <script type="text/javascript" src="demo-scripts/demo-script.js"></script> @@DEMO@@-->
+    <script type="text/javascript" src="demo-scripts/demo-script.js"></script>
+    <script type="text/javascript" src="demo-scripts/cheats.js"></script> 
+    
+@@DEMO@@-->
 
 <!--@@DEV@@
     <script type="text/javascript" src="scripts/main/mainController.js"></script>
