fixing the tests

--- a/source/java/admin-webapp/src/scripts/volumes/create/volumeCreate.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/volumeCreate.html
@@ -19,7 +19,7 @@
             </div>
             <div class="volume-settings-panel">
                 <div class="volume-option form-group">
-                    <fui-input type="text" class="volume-name skinny" size="32" placeholder="Enter Volume Name" ng-model="volumeName"></fui-input>
+                    <fui-input type="text" class="volume-name-input skinny" size="32" placeholder="Enter Volume Name" ng-model="volumeName"></fui-input>
                 </div>
             </div>
         </section>
